[gd_scene load_steps=4 format=2]

[ext_resource path="res://Assets/Fonts/haxorville-main/regular/haxorville.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://UI/Dialogue+/SpeechBubble.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 20
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_top = 2
extra_spacing_bottom = -2
font_data = ExtResource( 1 )

[node name="ResizableSpeechBubble" type="Control" groups=["Speech_Bubbles"]]
visible = false
script = ExtResource( 2 )
bubble_color = Color( 1, 1, 1, 1 )

[node name="ResizableSpeechBubble" type="MarginContainer" parent="."]
margin_left = 11.0
margin_top = -136.0
margin_right = 339.0
margin_bottom = -36.0
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="ResizableSpeechBubble"]
margin_right = 328.0
margin_bottom = 100.0
color = Color( 1, 1, 1, 0.0588235 )

[node name="BorderPolygons" type="NinePatchRect" parent="ResizableSpeechBubble"]
margin_right = 328.0
margin_bottom = 100.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Polygon2D" type="Polygon2D" parent="ResizableSpeechBubble/BorderPolygons"]
visible = false
color = Color( 0, 0, 0, 0.392157 )
polygon = PoolVector2Array( 0, 0, 0, 1, 0, 1, 0, 2, 1, 2, 1, 1, 2, 1, 2, 0 )

[node name="Polygon2D2" type="Polygon2D" parent="ResizableSpeechBubble/BorderPolygons"]
visible = false
position = Vector2( 0, 40 )
rotation = -1.5708
color = Color( 0, 0, 0, 0.392157 )
polygon = PoolVector2Array( 0, 0, 0, 1, 0, 1, 0, 2, 1, 2, 1, 1, 2, 1, 2, 0 )

[node name="Polygon2D3" type="Polygon2D" parent="ResizableSpeechBubble/BorderPolygons"]
visible = false
position = Vector2( 40, 40 )
rotation = -3.14159
color = Color( 0, 0, 0, 0.392157 )
polygon = PoolVector2Array( 0, 0, 0, 1, 0, 1, 0, 2, 1, 2, 1, 1, 2, 1, 2, 0 )

[node name="Polygon2D4" type="Polygon2D" parent="ResizableSpeechBubble/BorderPolygons"]
visible = false
position = Vector2( 40, 0 )
rotation = -4.71239
color = Color( 0, 0, 0, 0.392157 )
polygon = PoolVector2Array( 0, 0, 0, 1, 0, 1, 0, 2, 1, 2, 1, 1, 2, 1, 2, 0 )

[node name="RichTextLabel" type="RichTextLabel" parent="ResizableSpeechBubble"]
margin_right = 328.0
margin_bottom = 100.0
size_flags_horizontal = 5
size_flags_vertical = 5
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
tab_size = 1
scroll_active = false

[node name="NextLineTimer" type="Timer" parent="."]

[node name="LeftLine2D" type="Line2D" parent="."]
points = PoolVector2Array( 0, 0, 10, -50 )
width = 1.0
default_color = Color( 1, 1, 1, 1 )

[node name="RightLine2D2" type="Line2D" parent="."]
points = PoolVector2Array( 0, 0, 28, -35 )
width = 1.0
default_color = Color( 1, 1, 1, 1 )
